# ErgoLens

./: README.md
4-out/: 0_keypoints.json  0_keypoints_1.json  0_keypoints_2.json  0_keypoints_3.json  1000_keypoints.json  1000_keypoints_1.json  1000_keypoints_2.json  1000_keypoints_3.json  1001_keypoints.json  1001_keypoints_1.json  1001_keypoints_2.json  1001_keypoints_3.json  1002_keypoints.json  1002_keypoints_1.json  1002_keypoints_2.json  1002_keypoints_3.json  1003_keypoints.json  1003_keypoints_1.json  1003_keypoints_2.json  1003_keypoints_3.json  1004_keypoints.json  1004_keypoints_1.json  1004_keypoints_2.json  1004_keypoints_3.json  1005_keypoints.json  1005_keypoints_1.json  1005_keypoints_2.json  1005_keypoints_3.json  1006_keypoints.json  1006_keypoints_1.json  1006_keypoints_2.json  1006_keypoints_3.json  1007_keypoints.json  1007_keypoints_1.json  1007_keypoints_2.json  1007_keypoints_3.json  1008_keypoints.json  1008_keypoints_1.json  1008_keypoints_2.json  1008_keypoints_3.json  (+15200 more)
calibration/: createXML.py  split.py
calibration/ProjectKara/prototypes/v1/: Kara_v1.3mf  Kara_v1.stl
calibration/ProjectKara/prototypes/v2/: Kara_v2.3mf
calibration/ProjectKara/prototypes/v3/: Kara_v3.3mf  Kara_v3.stl  Kara_v3_1.3mf  Kara_v3_1.stl
calibration/ProjectKara/tools/KaraTools/: CMakeLists.txt  CPP11.cmake  CountExtractFrames.py  KaraCalibrator.cpp  KaraRecorder.cpp  TimeStamp.hpp
calibration/ProjectKara/tools/KaraTools/builds/linux/: calib.params
ergoRisk/: bodypart2angle.py
examples/tutorial_api_cpp/: 13_synchronous_custom_input.cpp  18_sync_custom_input_3d.cpp  CMakeLists.txt
include/openpose/3d/: cameraParameters.hpp
models/cameraParameters/: air-cam-ext-old.xml  air-cam.xml  fire-cam.xml  water-cam-ext.xml
models/cameraParameters/7-26-old/: 0-water.xml  4-fire.xml  6-earth.xml
models/cameraParameters/extras/: cam-front-air.xml  cam-right-earth.xml  cam-right-fire.xml  cam-top-water.xml  water-cam-extrinsics-final.xml
models/cameraParameters/flir/: 0-air.xml  2-earth.xml  4-water.xml  6-fire.xml
models/cameraParameters/flir2/: 0-air.xml  2-earth.xml  4-water.xml  6-fire.xml
models/cameraParameters/four_cam/: 2-air.xml  4-fire.xml  6-earth.xml  earth-op.xml  water-cam.xml
models/cameraParameters/good_for_3d/: 0-air.xml  2-water.xml
models/cameraParameters/good_for_3d/else/: 0-air.xml  (+1 more)
models/cameraParameters/old-ext/: air-cam-ext-old.xml  water-cam-ext.xml
src/openpose/gui/: gui3D.cpp
(+163 files in other folders)
