CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME KaraTools)


#------------------------
# KaraRecorder
#------------------------
PROJECT(KaraRecorder)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

INCLUDE(CPP11.cmake)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(OpenMP)
IF(OPENMP_FOUND)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
  MESSAGE(STATUS "Found OpenMP")
ENDIF()

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

SET(CPP_FILES KaraRecorder.cpp)
SET(VC_LIBS ${OpenCV_LIBS})
	
ADD_EXECUTABLE(${PROJECT_NAME} ${CPP_FILES} ${HPP_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${VC_LIBS})

#------------------------
# KaraCalibrator
#------------------------
PROJECT(KaraCalibrator)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

INCLUDE(CPP11.cmake)
SET(CPP_FILES KaraCalibrator.cpp)
SET(VC_LIBS ${OpenCV_LIBS})
	
ADD_EXECUTABLE(${PROJECT_NAME} ${CPP_FILES} ${HPP_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${VC_LIBS})
